# openvino_dev

./: .gitignore  CMakeLists.txt  CMakeLists_doc.md
cmake/: dependencies.cmake  extra_modules.cmake  features.cmake
cmake/developer_package/: IEDevScriptsConfig.cmake  IEDevScriptsConfig.md  debug.cmake  features.cmake  options.cmake  python_requirements.cmake  version.cmake
cmake/developer_package/frontends/: frontends.cmake
cmake/developer_package/plugins/: plugins.cmake
src/: CMakeLists.txt
src/cmake/: openvino.cmake
src/common/: CMakeLists.txt
src/common/conditional_compilation/: CMakeLists.txt
src/common/preprocessing/src/: CMakeLists.txt
src/common/util/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/dev_api/: CMakeLists.txt
src/core/frontends/: CMakeLists.txt
src/core/frontends/common/: CMakeLists.txt
src/core/frontends_common/common/: CMakeLists.txt
src/core/inference/: CMakeLists.txt
src/core/inference/src/: ie_core.cpp  system_allocator.hpp
src/core/inference/src/dev/: make_tensor.hpp
src/core/low_precision_transformations/: CMakeLists.txt
src/core/low_precision_transformations/include/low_precision/: add.hpp  assign_and_read_value.hpp  clamp.hpp  concat.hpp  convert.hpp  convolution.hpp  convolution_backprop_data.hpp  eliminate_fake_quantize.hpp  eltwise_base_transformation.hpp  fake_quantize.hpp  fake_quantize_decomposition.hpp  fold_convert.hpp  fold_fake_quantize.hpp  fuse_convert.hpp  fuse_multiply_to_fake_quantize.hpp  fuse_subtract_to_fake_quantize.hpp  gather.hpp  group_convolution.hpp  layer_transformation.hpp  max_pool.hpp  move_fake_quantize.hpp  multiply.hpp  multiply_to_group_convolution.hpp  network_helper.hpp  pad.hpp  prelu.hpp  recurrent_cell.hpp  reduce_base_transformation.hpp  reduce_max.hpp  reduce_mean.hpp  reduce_min.hpp  reduce_sum.hpp  relu.hpp  shuffle_channels.hpp  squeeze.hpp  strided_slice.hpp  subtract.hpp  transformation_context.hpp  transparent_base_transformation.hpp  transpose.hpp  (+2 more)
src/core/low_precision_transformations/include/low_precision/common/: fake_quantize_dequantization.hpp
src/core/low_precision_transformations/src/: align_quantization_intervals.cpp  align_quantization_parameters.cpp  assign_and_read_value.cpp  avg_pool.cpp  clamp.cpp  eliminate_fake_quantize.cpp  fold_convert.cpp  fuse_multiply_to_fake_quantize.cpp  fuse_subtract_to_fake_quantize.cpp  gather.cpp  low_precision.cpp  markup_avg_pool_precision_preserved.cpp  max_pool.cpp  multiply_to_group_convolution.cpp  network_helper.cpp  pad.cpp  propagate_precisions.cpp  recurrent_cell.cpp  reduce_base_transformation.cpp  reduce_max.cpp  reduce_mean.cpp  reduce_min.cpp  reduce_sum.cpp  shuffle_channels.cpp  split.cpp  squeeze.cpp  strided_slice.cpp  transpose.cpp  unsqueeze.cpp
src/core/low_precision_transformations/tests/: pad_transformation.cpp  simple_low_precision_transformer.cpp  simple_low_precision_transformer.hpp  split_transformation.cpp  variadic_split_transformation.cpp
src/core/shape_inference/include/: range_shape_inference.hpp
src/core/src/runtime/: allocator.cpp  blob_allocator.hpp
src/core/transformations/: CMakeLists.txt
src/core/transformations/include/transformations/common_optimizations/: concat_reduce_fusion.hpp  softmax_fusion.hpp
src/core/transformations/include/transformations/op_conversions/: softmax_decomposition.hpp
src/core/transformations/src/transformations/common_optimizations/: broadcast_elementwise_fusion.cpp  common_optimizations.cpp  mul_conv_fusion.cpp  random_uniform_fusion.cpp
src/core/transformations/src/transformations/op_conversions/: convert_gelu.cpp
src/frontend/: CMakeLists.txt
src/frontend/ir/src/: CMakeLists.txt
src/frontends/common/src/: plugin_loader.cpp
src/plugins/intel_gpu/include/intel_gpu/primitives/: activation.hpp  batch_to_space.hpp  slice.hpp  softmax.hpp  space_to_batch.hpp
src/plugins/intel_gpu/src/graph/: CMakeLists.txt
src/plugins/intel_gpu/src/graph/graph_optimizer/: prepare_primitive_fusing.cpp
src/plugins/intel_gpu/src/plugin/: transformations_pipeline.cpp
src/plugins/intel_gpu/src/runtime/ocl/: ocl_device_detector.cpp
